feature(VCS): add  svn and git to golang image

--- a/golang/1.8/alpine/Dockerfile
+++ b/golang/1.8/alpine/Dockerfile
@@ -8,7 +8,9 @@ RUN apk add --no-cache \
 		gcc \
 		musl-dev \
 		cmake \
-		make
+		make \
+		git \
+		subversion
 
 ENV DOCKER_BUCKET get.docker.com
 ENV DOCKER_VERSION 17.03.0-ce
